--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fleet Management App</title>
+    <style>
+        :root {
+            --bg: #f7f8fb;
+            --card: #fff;
+            --accent: #2b6cbo;
+            --muted: #6b7280;
+        }
+        *{
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+        body {
+            margin: 0;
+            min-height: 100vh;
+            background: linear-gradient(rgb(237, 240, 247), rgb(242, 243, 247));
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 24px;
+        }
+        .wrap{
+            width: 100%;
+            max-width: 420px;
+            background: var(--card);
+            padding: 28px;
+            border-radius: 10px;
+            box-shadow: 0 6px 18px rgba(20, 20, 40, 0.08);
+        }
+    </style>
 </head>
 <body>
     <h1>Fleet Management Application</h1>
