--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .navbar {
+            background-color: white;
+            padding: 10px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        select, button {
+            padding: 5px;
+            margin-right: 10px;
+        }
+        .main {
+            display: flex;
+            gap: 20px;
+        }
+        .sidebar {
+            width: 250px;
+            padding: 15px;
+            background: white;
+            border: 1px solid #ccc;
+        }
+        .sidebar input, .sidebar select {
+            width: 100%;
+            padding: 6px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            border: 1px solid #aaa;
+        }
+        .addBtn {
+            width: 100%;
+            padding: 10px;
+            background-color: rgb(65, 65, 255);
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .card {
+            background-color: white;
+            padding: 10px;
+            border: 1px solid #ccc;
+            margin-bottom: 15px;
+        }
+        .card img {
+            width: 100%;
+            height: 120px;
+            object-fit: cover;
+            border: 1px solid #ddd;
+            margin-bottom: 10px;
+        }
+        .btnRow button {
+            padding: 6px;
+            margin-right: 5px;
+            border: none;
+            cursor: pointer;
+        }
+        .updateBtn, ,toggleBtn {
+            background-color: rgb(65, 200, 65);
+            color: white;
+        }
+        .deleteBtn {
+            background-color: rgb(255, 65, 65);
+            color: white;
+            border: none;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
@@ -43,10 +114,6 @@
             <button class="addBtn" onclick="addFleet()">Add Fleet</button>
         </div>
         <script>
-            if(localStorage.getItem("loggedIn") !== "yes") {
-                alert("Please login");
-                window.location.href="index.html";
-            }
             let vehicles = [];
             let Image = "https://coding-platform.s3.amazonaws.com/dev/lms/tickets/5e80fcb6-3f8e-480c-945b-30a5359eb40e/JNmYjkVr3WOjsrbu.png"
 
