--- a/admin.html
+++ b/admin.html
@@ -65,7 +65,7 @@
             border: none;
             cursor: pointer;
         }
-        .updateBtn, ,toggleBtn {
+        .updateBtn, .toggleBtn {
             background-color: rgb(65, 200, 65);
             color: white;
         }
