--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fleet Management App</title>
+    <title>Fleet Login</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background: white;
+            font-family: Arial;
+            background: #f4f4f4;
+            padding: 30px;
         }
-        .container {
+        .box {
             width: 300px;
             margin: auto;
-            background: rgb(251, 252, 252);
+            background: white;
             padding: 20px;
             border: 1px solid #ccc;
-            border-radius: 10px;
+            border-radius: 8px;
         }
-        h1 {
-            text-align: center;
-        }
-        label {
-            display: block;
-            margin-top: 10px;
-        }
+        h2 { text-align: center; }
+        label { display: block; margin-top: 10px; }
         input {
             width: 100%;
             padding: 8px;
@@ -33,38 +28,45 @@
         }
         button {
             width: 100%;
-            padding: 10px;
             margin-top: 15px;
-            background-color: rgb(65, 65, 255);
-            color: white;
+            padding: 10px;
+            background: #4169e1;
             border: none;
+            color: white;
             cursor: pointer;
         }
         button:hover {
-            background-color: rgb(45, 45, 200);
+            background: #314ec7;
         }
     </style>
 </head>
 <body>
-        <form class="container">
-            <h1>Fleet Management Application</h1>
-            <label>Email ID:</label>
-            <input type="email" id="emailID" name="emailID" required><br><br>
-            <label>Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
-            <button onclick="login()">Login</button>
-        </form>
-        <script>
-            function login() {
-                let email = document.getElementById("emailID").value.trim();
-                let password = document.getElementById("password").value.trim();
-                if(email === "admin@gmail.com" && password === "admin1234") {
-                    localStorage.setItem("loggedIn", "yes");
-                    window.location.href = "admin.html";
-                } else {
-                    alert("Invalid credentials");
-                }
+
+    <div class="box">
+        <h2>Login</h2>
+
+        <label>Email</label>
+        <input type="email" id="email">
+
+        <label>Password</label>
+        <input type="password" id="pass">
+
+        <button type="button" onclick="login()">Login</button>
+    </div>
+
+    <script>
+        function login() {
+            let e = document.getElementById("email").value.trim();
+            let p = document.getElementById("pass").value.trim();
+
+            if (e === "admin@gmail.com" && p === "admin1234") {
+                localStorage.setItem("loggedIn", "yes");
+                window.location.href = "admin.html";
+            } else {
+                alert("Incorrect email or password");
             }
-        </script>
+        }
+    </script>
+
 </body>
 </html>
